# redis-fs

./: .gitignore  BACKLOG.md  CLAUDE.md  Dockerfile  Dockerfile.mcp  Dockerfile.redis  Makefile  README.md  RELEASE_NOTES.md  docker-compose.yml  docs.md  fs.c  fs.h  path.c  path.h  pyproject.toml  skill.md  test.py
.github/workflows/: ci.yml
module/: Makefile  fs.c  path.h
mount/: Makefile  go.mod  go.sum
mount/cmd/redis-fs-mount/: main.go
mount/cmd/rfs/: main.go
mount/internal/cache/: cache.go
mount/internal/client/: client.go  parser.go
mount/internal/redisfs/: attr.go  dir.go  errors.go  errors_test.go  file.go  fs.go  fs_cache_test.go  handle.go  symlink.go
redis_fs/: __init__.py  cli.py  client.py  exceptions.py
redisclaw/: Makefile  README.md  pyproject.toml
redisclaw/redisclaw/: __init__.py  agent.py  cli.py  memory.py  tools.py
redisclaw/tests/: __init__.py  test_e2e.py
skills/redis-fs/: SKILL.md
tasks/: 001_AGENT_SKILL.md  002_PYTHON_LIBRARY.md  003_MCP_SERVER.md
tests/: __init__.py  append.py  chmod.py  chown.py  cp.py  deletelines.py  echo_cat.py  error_handling.py  find.py  glob_patterns.py  grep.py  hardening_phase0.py  head.py  info.py  insert.py  invariants.py  lifecycle.py  lines.py  ls.py  mkdir.py  mv.py  path_normalize.py  rdb_persistence.py  replace.py  rm.py  stat.py  symlinks.py  tail.py  test_cmd.py  test_redis_fs.py  touch.py  tree.py  truncate_utimens.py  wc.py  wrong_key_type.py
